--- a/debian/po/eu.po
+++ b/debian/po/eu.po
@@ -24,10 +24,10 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: eu\n"
+"Project-Id-Version: di-sublevel1_eu\n"
 "Report-Msgid-Bugs-To: nobootloader@packages.debian.org\n"
 "POT-Creation-Date: 2019-09-26 22:04+0000\n"
-"PO-Revision-Date: 2020-10-28 20:33+0100\n"
+"PO-Revision-Date: 2020-11-03 18:23+0100\n"
 "Last-Translator: Iñaki Larrañaga Murgoitio <dooteo@zundan.com>\n"
 "Language-Team: Basque <librezale@librezale.eus>\n"
 "Language: eu\n"
@@ -64,7 +64,7 @@ msgstr "Huts egin du proc fitxategi-sistema /target/proc-en muntatzean."
 #. :sl4:
 #: ../nobootloader.templates:2001
 msgid "Check /var/log/syslog or see virtual console 4 for the details."
-msgstr "Egiaztatu /var/log/messages edo ikusi 4. kontsola xehetasunetarako."
+msgstr "Egiaztatu /var/log/syslog edo ikusi 4. kontsola xehetasunetarako."
 
 #. Type: error
 #. Description
@@ -117,7 +117,7 @@ msgid ""
 "Alternatively, you will be able to boot the kernel manually by entering, at "
 "the firmware prompt:"
 msgstr ""
-"Bestela, nukleoa eskuz abiarazi dezakezu firmwarearen gonbitean honakoa "
+"Bestela, nukleoa eskuz abiaraz dezakezu firmwarearen gonbitean honakoa "
 "idatziz:"
 
 #. Type: note
@@ -129,7 +129,7 @@ msgid ""
 "automatically. At the end of installation, the system will reboot. At the "
 "firmware prompt, set the following variables to simplify booting:"
 msgstr ""
-"Aldagai batzuk CFE-n ezarri behar dira sistema automatikoki abiarazi dadin. "
+"Aldagai batzuk CFE-n ezarri behar dira sistema automatikoki abiarazteko. "
 "Instalazioaren amaieran, sistema berrabiarazi egingo da. Firmware-aren "
 "gonbitean, ezarri firmwarearen aldagai hauek abiaraztea errazteko:"
 
@@ -152,8 +152,8 @@ msgid ""
 "If you prefer to auto-boot on every startup, you can set the following "
 "variable in addition to the ones above:"
 msgstr ""
-"Sistema abiaraztean abio automatikoa nahiago baduzu, aldagai hau ezar "
-"dezakezu aurrekoekin batera:"
+"Sistema abiarazten den bakoitzean abio automatikoa nahiago baduzu, aldagai "
+"hau ezar dezakezu aurrekoekin batera:"
 
 #. Type: note
 #. Description
