--- a/debian/po/oc.po
+++ b/debian/po/oc.po
@@ -16,13 +16,14 @@ msgstr ""
 "Project-Id-Version: debian-installer sublevel1\n"
 "Report-Msgid-Bugs-To: nobootloader@packages.debian.org\n"
 "POT-Creation-Date: 2019-09-26 22:04+0000\n"
-"PO-Revision-Date: 2020-10-04 13:50+0200\n"
-"Last-Translator: Quentin PAGÈS\n"
+"PO-Revision-Date: 2020-11-15 18:28+0000\n"
+"Last-Translator: Quentin PAGÈS <quentinantonin@free.fr>\n"
 "Language-Team: Occitan (post 1500) <ubuntu-l10n-oci@lists.ubuntu.com>\n"
 "Language: oc\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=2; plural=n > 1;\n"
 
 #. Type: text
 #. Description
@@ -97,7 +98,7 @@ msgid ""
 "You will only need to do this once.  Afterwards, enter the \"boot\" command "
 "or reboot the system to proceed to your newly installed system."
 msgstr ""
-"Cal qu'aquesta operacion siá faita pas qu'un còp. Aprèp, vos cal utilizar la "
+"Cal qu'aquesta operacion siá facha pas qu'un còp. Aprèp, vos cal utilizar la "
 "comanda « boot » o reaviar per utilizar lo sistèma installat."
 
 #. Type: note
@@ -162,7 +163,7 @@ msgid ""
 "No boot loader has been installed, either because you chose not to or "
 "because your specific architecture doesn't support a boot loader yet."
 msgstr ""
-"Cap de programa d'aviada es pas installat, siá perque avètz pas fait aquesta "
+"Cap de programa d'aviada es pas installat, siá perque avètz pas fach aquesta "
 "causida, siá perque, pas cap es a gerir actualament l'arquitectura que sètz "
 "a utilizar."
 
