--- a/debian/po/ar.po
+++ b/debian/po/ar.po
@@ -11,6 +11,10 @@
 # Abdelhak Bougouffa, 2017.
 # najib LAARIBI <supnano@gmail.com>, 2018.
 # ButterflyOfFire <ButterflyOfFire@protonmail.com>, 2018.
+# Osama <osama.ibrahim.89@gmail.com>, 2019.
+# zer0-x <ProFessorHassan3@gmail.com>, 2021.
+# Fahim Sabah <katheer.kaleel@gmail.com>, 2021.
+#
 #
 # Translations from iso-codes:
 #     Translations taken from ICU SVN on 2007-09-09
@@ -27,8 +31,8 @@ msgstr ""
 "Project-Id-Version: ar\n"
 "Report-Msgid-Bugs-To: nobootloader@packages.debian.org\n"
 "POT-Creation-Date: 2019-09-26 22:04+0000\n"
-"PO-Revision-Date: 2019-02-22 14:15+0000\n"
-"Last-Translator: Yaron Shahrabani <sh.yaron@gmail.com>\n"
+"PO-Revision-Date: 2021-04-01 14:26+0000\n"
+"Last-Translator: Fahim Sabah <katheer.kaleel@gmail.com>\n"
 "Language-Team: \n"
 "Language: ar\n"
 "MIME-Version: 1.0\n"
@@ -130,7 +134,7 @@ msgid ""
 "firmware prompt, set the following variables to simplify booting:"
 msgstr ""
 "يجب تعيين بعض المتغيرات في CFE كي يتمكن نظامك من الإقلاع آليا. عند نهاية "
-"التثبيت، سيتم إعادة إقلاع النظام. يجب تعيين متغيرات  firmware عند ملقن "
+"التثبيت، سيتم إعادة إقلاع النظام. يجب تعيين متغيرات firmware عند ملقن "
 "firmware لتمكين الإقلاع الآلي:"
 
 #. Type: note
