--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+nobootloader (1.63) unstable; urgency=medium
+
+  * Team upload
+
+  [ Updated translations ]
+  * Arabic (ar.po) by Fahim Sabah
+
+ -- Holger Wansing <hwansing@mailbox.org>  Sun, 30 May 2021 23:18:00 +0200
+
 nobootloader (1.62) unstable; urgency=medium
 
   * Team upload
